<resources>
    <string name="app_name">Challenges</string>
    <string name="title_home">Home</string>
    <string name="title_keranjang">Keranjang</string>
    <string name="title_akun">Akun</string>
    <string name="hai_binarian">Hai Binarian</string>
    <string name="mau_makan_apa_nich">Mau Makan apa nich?</string>
    <string name="diskon_30">Diskon 30%</string>
    <string name="pesan_makanan_dengan_aplikasi_dan_dapatkan_diskonmu">Pesan makanan dengan aplikasi dan dapatkan diskonmu</string>
    <string name="burger">Burger</string>
    <string name="mie">Mie</string>
    <string name="snack">Snack</string>
    <string name="minuman">Minuman</string>
    <string name="list_menu_makanan">List Menu Makanan</string>
    <string name="nama_makanan">Nama Makanan</string>
    <string name="harga_makanan">Harga Makanan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_keranjang">Keranjang</string>
    <string name="detail_makanan">Detail Makanan</string>
    <string name="lokasi">Lokasi</string>
    <string name="detail_lokasi">detail_lokasi</string>
    <string name="tambah_ke_keranjang_rp_18_000">Tambah Ke Keranjang - Rp 18.000</string>
    <string name="tambah">+</string>
    <string name="kurang">-</string>
    <string name="jumlah_pesanan">1</string>
    <string name="sate_ayam">Sate Ayam</string>
    <string name="rp_19_000">Rp 19,000</string>
    <string name="keranjang">Keranjang</string>
    <string name="login">Login</string>
    <string name="don_t_have_any_account_register">Don\'t have any account? Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="no_telepon">No.Telepon</string>
    <string name="registrasi">Registrasi</string>
    <string name="judul_makanan">Judul Makanan</string>
    <string name="dimsum">dimsum</string>
    <string name="harga">Harga</string>
    <string name="rp_25_000">Rp. 25.000,-</string>
    <string name="kwasong">kwasong</string>
    <string name="spageti">spageti</string>
    <string name="ayam">ayam</string>
    <string name="harga_dimsum">Rp. 10.000,-</string>
    <string name="harga_kwasong">Rp. 15.000,-</string>
    <string name="harga_spageti">Rp. 20.000,-</string>
    <string name="harga_burger">Rp. 25.000,-</string>
    <string name="harga_ayam">Rp. 30.000,-</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="register_account">Register</string>
    <string name="create_a_new_account">Create A New Account</string>
    <string name="email_address">Email Address</string>
    <string name="name">name</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="register_succeed">Register Succeed</string>
    <string name="continue_login">Continue Login</string>
    <string name="tombol_berbahaya">Tombol Berbahaya</string>
</resources>