<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.RegisterFragment"
    android:id="@+id/fragment_register">

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_account"
        android:textColor="@color/gmts_blue"
        android:textSize="24sp"
        android:textStyle="bold"
        android:alpha="0"
        tools:alpha="100"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="36sp"/>

    <TextView
        android:id="@+id/tv_welcome2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_a_new_account"
        android:alpha="0"
        tools:alpha="100"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="4sp"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_name"
        android:layout_width="match_parent"
        android:alpha="0"
        tools:alpha="100"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_height="44dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:boxStrokeColor="@color/gmts_blue"
        android:outlineAmbientShadowColor="@color/gmts_blue_bg"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome2">

        <EditText
            android:id="@+id/ed_register_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/name"
            android:layout_gravity="start"
            android:paddingHorizontal="8dp"
            android:inputType="text"
            android:layout_marginTop="16dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_email"
        android:layout_width="match_parent"
        android:alpha="0"
        tools:alpha="100"
        android:layout_height="44dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:boxStrokeColor="@color/gmts_blue_bg"
        android:outlineAmbientShadowColor="@color/gmts_blue_bg"
        app:layout_constraintTop_toBottomOf="@id/tl_name">

        <EditText
            android:id="@+id/ed_register_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email_address"
            android:layout_gravity="start"
            android:paddingHorizontal="8dp"
            android:inputType="text"
            android:layout_marginTop="16dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_password"
        android:layout_width="match_parent"
        android:alpha="0"
        tools:alpha="100"
        android:layout_height="44dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:boxStrokeColor="@color/gmts_blue"
        android:outlineAmbientShadowColor="@color/gmts_blue_bg"
        app:layout_constraintTop_toBottomOf="@id/tl_email">

        <EditText
            android:id="@+id/ed_register_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingHorizontal="8dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:alpha="0"
        android:text="@string/registrasi"
        tools:alpha="100"
        android:shadowColor="@color/gmts_blue_bg"
        android:layout_height="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/linear_info_login"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:id="@+id/linear_info_login"
        android:alpha="0"
        tools:alpha="100"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_horizontal"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/gmts_blue"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center_horizontal"
            android:layout_marginStart="2dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>